--- a/fluentd/fluentd-ds.yaml
+++ b/fluentd/fluentd-ds.yaml
@@ -4,6 +4,8 @@ metadata:
   name: fluentd
   labels:
     app: fluentd
+namespace: edumeet-141
+name: fluentd
 spec:
   selector:
     matchLabels:
@@ -20,7 +22,7 @@ spec:
         image: fluent/fluentd-kubernetes-daemonset:v1.4.2-debian-elasticsearch-1.1
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
-            value: "elasticsearch.default.svc.cluster.local"
+            value: "elasticsearch"
           - name:  FLUENT_ELASTICSEARCH_PORT
             value: "9200"
           - name: FLUENT_ELASTICSEARCH_SCHEME
