--- a/fluentd/fluentd-rb.yaml
+++ b/fluentd/fluentd-rb.yaml
@@ -2,6 +2,7 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluentd
+  namespace: edumeet-141
 roleRef:
   kind: ClusterRole
   name: fluentd
